NetBSD Problem Report #39732

From www@NetBSD.org  Sun Oct 12 12:12:47 2008
Return-Path: <www@NetBSD.org>
Received: from mail.netbsd.org (mail.netbsd.org [204.152.190.11])
	by narn.NetBSD.org (Postfix) with ESMTP id 986CA63BAC6
	for <gnats-bugs@gnats.netbsd.org>; Sun, 12 Oct 2008 12:12:47 +0000 (UTC)
Message-Id: <20081012121247.40B8863B88A@narn.NetBSD.org>
Date: Sun, 12 Oct 2008 12:12:47 +0000 (UTC)
From: tetokubo+netbsd@gmail.com
Reply-To: tetokubo+netbsd@gmail.com
To: gnats-bugs@NetBSD.org
Subject: ping6: It takes interval seconds to send the first echo-request
X-Send-Pr-Version: www-1.0

>Number:         39732
>Category:       bin
>Synopsis:       ping6: It takes interval seconds to send the first echo-request
>Confidential:   no
>Severity:       non-critical
>Priority:       low
>Responsible:    dholland
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Sun Oct 12 12:15:00 +0000 2008
>Closed-Date:    Sat Nov 01 04:53:17 +0000 2008
>Last-Modified:  Sat Nov 01 04:53:17 +0000 2008
>Originator:     Tetokubo
>Release:        4.0
>Organization:
>Environment:
NetBSD  4.0 NetBSD 4.0 (GENERIC) #0: Sun Dec 16 00:20:10 PST 2007  builds@wb34:/home/builds/ab/netbsd-4-0-RELEASE/i386/200712160005Z-obj/home/builds/ab/netbsd-4-0-RELEASE/src/sys/arch/i386/compile/GENERIC i386
>Description:
The following example, it takes 10 seconds.

ping6 -i 10 -c 1 localhost

It takes interval seconds to send the first echo-request.

>How-To-Repeat:
The following example, it takes 10 seconds.

ping6 -i 10 -c 1 localhost

>Fix:
*** ./ping6.c.orig	Sun Oct 12 22:09:25 2008
--- ./ping6.c	Mon Oct 13 05:54:58 2008
***************
*** 1008,1015 ****
  		itimer.it_interval = interval;
  		itimer.it_value = interval;
  		(void)setitimer(ITIMER_REAL, &itimer, NULL);
! 		if (ntransmitted)
! 			retransmit();
  	}

  	seenalrm = seenint = 0;
--- 1008,1014 ----
  		itimer.it_interval = interval;
  		itimer.it_value = interval;
  		(void)setitimer(ITIMER_REAL, &itimer, NULL);
! 		retransmit();
  	}

  	seenalrm = seenint = 0;

>Release-Note:

>Audit-Trail:
From: "David A. Holland" <dholland@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/39732 CVS commit: src/sbin/ping6
Date: Mon, 13 Oct 2008 13:47:36 +0000 (UTC)

 Module Name:	src
 Committed By:	dholland
 Date:		Mon Oct 13 13:47:35 UTC 2008

 Modified Files:
 	src/sbin/ping6: ping6.c

 Log Message:
 Fix reversed test in connection with combining -i and -l. If some
 packets have already sent because of the preload count handling, we
 shouldn't start off by sending another one right away. The reversed
 test causes ping6 to wait one interval before sending anything at all
 if you don't use -l. PR bin/39732.


 To generate a diff of this commit:
 cvs rdiff -r1.70 -r1.71 src/sbin/ping6/ping6.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->pending-pullups
State-Changed-By: dholland@NetBSD.org
State-Changed-When: Mon, 13 Oct 2008 13:51:08 +0000
State-Changed-Why:
Fixed in head (with a somewhat different change) - pullup-4 #1214 filed.


Responsible-Changed-From-To: bin-bug-people->dholland
Responsible-Changed-By: dholland@NetBSD.org
Responsible-Changed-When: Mon, 13 Oct 2008 13:52:35 +0000
Responsible-Changed-Why:
I did it.


From: Soren Jacobsen <snj@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/39732 CVS commit: [netbsd-4] src/sbin/ping6
Date: Fri, 31 Oct 2008 23:27:52 +0000 (UTC)

 Module Name:	src
 Committed By:	snj
 Date:		Fri Oct 31 23:27:52 UTC 2008

 Modified Files:
 	src/sbin/ping6 [netbsd-4]: ping6.c

 Log Message:
 Pull up following revision(s) (requested by dholland in ticket #1214):
 	sbin/ping6/ping6.c: revision 1.71
 Fix reversed test in connection with combining -i and -l. If some
 packets have already sent because of the preload count handling, we
 shouldn't start off by sending another one right away. The reversed
 test causes ping6 to wait one interval before sending anything at all
 if you don't use -l. PR bin/39732.


 To generate a diff of this commit:
 cvs rdiff -r1.70 -r1.70.2.1 src/sbin/ping6/ping6.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: pending-pullups->closed
State-Changed-By: dholland@NetBSD.org
State-Changed-When: Sat, 01 Nov 2008 04:53:17 +0000
State-Changed-Why:
fixed, thanks for the report


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2007 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.