Pull up following revision(s) (requested by dholland in ticket #1214): 	sbin/ping6/ping6.c: revision 1.71 Fix reversed test in connection with combining -i and -l. If some packets have already sent because of the preload count handling, we shouldn't start off by sending another one right away. The reversed test causes ping6 to wait one interval before sending anything at all if you don't use -l. PR bin/39732.